[gd_scene format=3 uid="uid://dam6t7hw76jho"]

[ext_resource type="Texture2D" uid="uid://v40lvntlk26t" path="res://assets/Timer Panel Fill.png" id="1_a01gx"]
[ext_resource type="Theme" uid="uid://b0twggdunvx5i" path="res://cool.theme" id="1_kk14n"]
[ext_resource type="Script" uid="uid://buh40012dvh6e" path="res://timer_progress.gd" id="2_2r26v"]
[ext_resource type="Texture2D" uid="uid://cxs8ilb2thkvb" path="res://assets/Ring1.png" id="2_kk14n"]
[ext_resource type="Texture2D" uid="uid://cshiv1s3hsoes" path="res://assets/Ring2.png" id="3_2r26v"]
[ext_resource type="Texture2D" uid="uid://bfc070lf7nvkh" path="res://assets/Ring3.png" id="4_6qkmh"]
[ext_resource type="Texture2D" uid="uid://nmglr2ynupn2" path="res://assets/Ring4.png" id="5_rx56n"]
[ext_resource type="Texture2D" uid="uid://cnvempf1tb21o" path="res://assets/Ring5.png" id="6_oy734"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w0vmy"]

[node name="TimerProgress" type="Control" unique_id=1643024562]
custom_minimum_size = Vector2(350, 200)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_kk14n")
script = ExtResource("2_2r26v")
start_time = 25.0
ring5_max_time = 25.0
ring4_max_time = 20.0
ring3_max_time = 15.0
ring2_max_time = 10.0
ring1_max_time = 5.0

[node name="FillPanel" type="PanelContainer" parent="." unique_id=2013820528]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_w0vmy")

[node name="Fill" type="TextureRect" parent="FillPanel" unique_id=162687706]
modulate = Color(0, 0, 0, 0.39215687)
layout_mode = 2
texture = ExtResource("1_a01gx")

[node name="ProgressRing1" type="TextureProgressBar" parent="." unique_id=1299301434]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
step = 0.01
value = 69.0
fill_mode = 4
radial_initial_angle = 270.0
radial_fill_degrees = 180.0
radial_center_offset = Vector2(0, 100)
texture_under = ExtResource("2_kk14n")
texture_progress = ExtResource("2_kk14n")
tint_under = Color(1, 1, 1, 0.13333334)

[node name="ProgressRing2" type="TextureProgressBar" parent="." unique_id=591984948]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
step = 0.01
value = 69.0
fill_mode = 4
radial_initial_angle = 270.0
radial_fill_degrees = 180.0
radial_center_offset = Vector2(0, 100)
texture_under = ExtResource("3_2r26v")
texture_progress = ExtResource("3_2r26v")
tint_under = Color(1, 1, 1, 0.13333334)

[node name="ProgressRing3" type="TextureProgressBar" parent="." unique_id=1824506603]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
step = 0.01
value = 69.0
fill_mode = 4
radial_initial_angle = 270.0
radial_fill_degrees = 180.0
radial_center_offset = Vector2(0, 100)
texture_under = ExtResource("4_6qkmh")
texture_progress = ExtResource("4_6qkmh")
tint_under = Color(1, 1, 1, 0.13333334)

[node name="ProgressRing4" type="TextureProgressBar" parent="." unique_id=980224176]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
step = 0.01
value = 69.0
fill_mode = 4
radial_initial_angle = 270.0
radial_fill_degrees = 180.0
radial_center_offset = Vector2(0, 100)
texture_under = ExtResource("5_rx56n")
texture_progress = ExtResource("5_rx56n")
tint_under = Color(1, 1, 1, 0.13333334)

[node name="ProgressRing5" type="TextureProgressBar" parent="." unique_id=2057531817]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
step = 0.01
value = 69.0
fill_mode = 4
radial_initial_angle = 270.0
radial_fill_degrees = 180.0
radial_center_offset = Vector2(0, 100)
texture_under = ExtResource("6_oy734")
texture_progress = ExtResource("6_oy734")
tint_under = Color(1, 1, 1, 0.13333334)

[node name="LabelMargin" type="MarginContainer" parent="." unique_id=683974000]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="LabelMargin" unique_id=1804902081]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = -4

[node name="TimerLabel" type="RichTextLabel" parent="LabelMargin/VBoxContainer" unique_id=1035697271]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
text = "6.9"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 2

[node name="TimerUnit" type="RichTextLabel" parent="LabelMargin/VBoxContainer" unique_id=967627633]
layout_mode = 2
bbcode_enabled = true
text = "seconds"
fit_content = true
horizontal_alignment = 1
